@@ -12,7 +12,8 @@ DIST gitlab-gitaly-0.6.0.tar.bz2 687192 SHA256 ead87c0da129c075011a55e5b2138febf
 EBUILD gitlab-gitaly-0.10.0.ebuild 1611 SHA256 dc246485ca030c1e9700a8e7707f5e1fafebffd88f7ab12399c12076ee67632a SHA512 ed5e46fa20bfeb81da16f8fb0b702b7d8f71ca5d35f81456fd2ee31eec781cae75e14081b2eeaae3959d6b5db7eb5ed84398c90c6f687b0a3dbf9e602b7cb8f6 WHIRLPOOL 7c6cbdd81e2da6f659482db204433430e2bb947175a56b85addd688dc511cae7dea45a99796c14c6cb2d352fb868752bafc14af34f100d538b5b40bebe2a0846
 EBUILD gitlab-gitaly-0.11.0.ebuild 1613 SHA256 6a93e81f94c7af310e4076fa7c81d93d5b4ed3a8c0a2812a58fab96bd6c318ce SHA512 0e2732f634de08a243b57b3766a3b1f3c7d7eafafbf40f72d87dfdbb51aad963aec45899d14a9114f43415dd5dde6734f5619613127485fbc64440b17734db8f WHIRLPOOL 750c4bd7349bd9ced835b3315e31d25ddc0e7fd7ba523ebe31feee86c19b1e0ef7f8e9f1c8fb483fb6b7b246db76ba195a3f48f4b834ff727ce3c2a7512f218e
 EBUILD gitlab-gitaly-0.11.2-r1.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
+EBUILD gitlab-gitaly-0.16.0.ebuild 925 SHA256 5a12499e0abada1e9351fcc25cf2dc882f577d9a0cdcd63a7f1819001664faeb SHA512 9752b120d754e95d96a432315171503329c9562448aad498d3aac091be12fcfbf2c617d74430f6578dbcea613981608d8369acc388f0238a4d29ab7c978c2a28 WHIRLPOOL af91a99bd879fac0fe1c29e5d9fb7a93ca8939bfb0bbf51ea9ddd43dd46867e8e918d1598176d3c85b53e6b9b27d07ff325d5856a3106e2402071870e886c059
 EBUILD gitlab-gitaly-0.3.0.ebuild 1611 SHA256 d4a80bcc6b9f1f6de0308e02fce0927e10c83620bc546ccc5b2ac8166b7cd5f0 SHA512 28ddef1dd80ce57a978e81048e7f07598dd83c83e0fdf4b6dbf01ff543d4abb4de437e658b07b3d60757163ed30e970327403ffd057e1d737d3dd8e23a534d38 WHIRLPOOL 3f42b071f5acaff80072a5708e50fcd8b4a397a6f2e5772f7234fbba3f606c89664433328495f59a84f5f5468503c11961b2d455878e2f445142778c7645397d
 EBUILD gitlab-gitaly-0.6.0.ebuild 1611 SHA256 dc246485ca030c1e9700a8e7707f5e1fafebffd88f7ab12399c12076ee67632a SHA512 ed5e46fa20bfeb81da16f8fb0b702b7d8f71ca5d35f81456fd2ee31eec781cae75e14081b2eeaae3959d6b5db7eb5ed84398c90c6f687b0a3dbf9e602b7cb8f6 WHIRLPOOL 7c6cbdd81e2da6f659482db204433430e2bb947175a56b85addd688dc511cae7dea45a99796c14c6cb2d352fb868752bafc14af34f100d538b5b40bebe2a0846
-MISC ChangeLog 1545 SHA256 564ba53f13b6525862eadb30b9eca08dae900582f165fbf251c3a25738a476fd SHA512 48a2c9cbc0546c8fd6fdd1d3582002efa44b1ae6a1d89947a1a8bf64c42a5016bce77b9bbb5fa08e1eab8f6a653915eb3f22ab2724a3f644a7bdf4f94694b75f WHIRLPOOL 415e4c103b83dfb0dcf84f01faa45685faea9601e261a2ce280537a10dc63d68f83374d0a65b17f93bac409aa2ea20ec77e7c13f16702df4a4b0a0e65d3671f6
+MISC ChangeLog 1730 SHA256 c12ce313e917e3b58a7f319fb372fad1fe166e2a6a6bf6f19c57d837c6bf0b58 SHA512 ed07d9198bf9311efd1cd359a83c1dc2767efd464839a4f84f48f90047e474cc6e3bc0f1f12b40cb894ffc480dff7ed066140eb67a8c5943aeb387f16ee0b21d WHIRLPOOL 71fd8e729c3edc7330638f3396bb40e3c6d1fb8cea903899133193649c7f96df24301b5266baf1fc66a724e9b9459a72dcfe9ab3daa5a3516ef9fc73b5025781
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
