@@ -1,3 +1,8 @@
+*gitlab-gitaly-0.16.0 (09 Jul 2017)
+
+  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-gitaly-0.16.0.ebuild:
+  www-servers/gitlab-gitaly:  Add ebuild for gitlab-gitaly-0.16.0
+
   08 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
   +files/0002-gitlab-gitaly-0.11.2-fix-config.toml.example.patch,
   +files/gitlab-gitaly-0.11.2.conf, +files/gitlab-gitaly-0.11.2.init,
